Criando teste de caso de uso de medico
