# src/modules/users/entities/user.entity.ts
@@ -1,29 +1,36 @@
-import { randomUUID } from "crypto"
-
+import { randomUUID } from "crypto";
+import { ParameterRequiredError } from "../../../errors/parameter-required.error";
 
 type IUser = {
-  name: string,
-  password: string,
-  username: string,
-}
+    name: string;
+    password: string;
+    username: string;
+};
 
 export class User {
-  name: string
-  password: string
-  username: string
-  id: string
-  isAdmin: boolean
+    name: string;
+    password: string;
+    username: string;
+    id: string;
+    isAdmin: boolean;
 
-  constructor(props: IUser){
-    this.name = props.name
-    this.username = props.username
-    this.password = props.password
-    this.id = randomUUID()
-    this.isAdmin = false;
-  }
+    constructor(props: IUser) {
+        if (!props.username || !props.password) {
+            throw new ParameterRequiredError(
+                "Username/password is required.",
+                422
+            );
+        }
 
-  static create(props: IUser) {
-    const user = new User(props)
-    return user
-  }
+        this.name = props.name;
+        this.username = props.username;
+        this.password = props.password;
+        this.id = randomUUID();
+        this.isAdmin = false;
+    }
+
+    static create(props: IUser) {
+        const user = new User(props);
+        return user;
+    }
 }
